fix alignment

--- a/sections/Headline/styles.module.scss
+++ b/sections/Headline/styles.module.scss
@@ -29,7 +29,6 @@
     max-width: 1200px;
     margin: auto;
     // place-items: center;
-    text-align: center;
 
     @media (max-width: 1375px) {
       flex-direction: column;
